# base-workspace

./: BUILD  MODULE.bazel  README.md  WORKSPACE  base-bazelrc  cleanup.sh  cleanup_test.sh  default_rules.bzl  update_workspace.date  update_workspace.pl
toolchain/: BUILD  cc_toolchain_config_llvm_10_debian.bzl
